# UC-VES

./: CMakeLists.txt  README.md
depends/COCO-framework/: coco-framework.hpp  coco-framework_not_encrypt_random.hpp  encrypt_witness.hpp  encrypt_witness_not_encrypt_random.hpp  encrypt_witness_or_encrypt_signature.hpp  nizk_dlog.hpp  or_protocol_not_encrypt_random.hpp  sigma_dlog.hpp  simulate_encrypt_signature.hpp
depends/bulletproofs/: innerproduct_proof.hpp
depends/common/: global.hpp  hash.hpp  routines.hpp
depends/customized_relation/: original_relation.hpp
depends/dlog/: nizk_dlog.hpp  sigma_dlog.hpp
depends/modified_fischlin/: modified_fischlin.hpp  or_protocol.hpp  samplable_hard.hpp
depends/rangeproofs/: range_proofs.hpp
depends/sigma/: sigma_proof.hpp
depends/twisted_elgamal/: twisted_elgamal.hpp
main/: escrow_protocol_comparison.cpp  uc_nizk_comparison.cpp  uc_nonuc_nizk_comparison.cpp
test/: parameter_comparasion.cpp  test_cocoframework.cpp  test_dlog.cpp  test_encrypt_witness.cpp  test_encrypt_witness_or_encrypt_signature.cpp  test_escrow_protocol.cpp  test_fischlin.cpp  test_fischlin_or.cpp  test_modified_relation.cpp  test_modifyfis_sigma_dlog.cpp  test_range_proof.cpp  test_sigma_dlog.cpp  test_simulate_encrypt_signature.cpp
